# Voix-de-la-Ville

./: .gitignore  Dev.md  Maintenance.md  README.md  Workflow.md  manage.py  pyproject.toml
VdV/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  managers.py  models.py  urls.py  utils.py  views.py
core/cities/: cities.sqlite  helper.py
core/management/commands/: clear_dev_data.py  dev_seed.py
locale/fr/LC_MESSAGES/: django.mo  django.po
locale/ko/LC_MESSAGES/: django.mo  django.po
locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
scripts/: download_models.py  download_spacy_model.py
static/css/: common.css  email_page.css  home.css
static/js/: main.js  utils.js
templates/: home.html
templates/account/: email.html  login.html  logout.html  signup.html
templates/admin/: add_admin_comment.html  base.html  login.html
templates/admin/core/report/: change_form.html
templates/admin/core/reporttools/: change_list.html
