[project]
name = "vdv"
version = "0.1.0"
description = "Voix de la Ville - Django MVP"
authors = [
    { name="Your Name", email="your@email.com" }
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "django>=5.1",
    "djangorestframework",
    "django-allauth",
    "django-cors-headers",
    "pillow",
]

[tool.setuptools]
packages = ["core"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"