[project]
name = "vdv"
version = "0.1.0"
description = "Voix de la Ville - Django MVP"
authors = [
    { name = "JH Bae", email = "mastropseudo@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "django>=5.1",
    "djangorestframework",
    "django-allauth",
    "django-cors-headers",
    "pillow",
    "spacy",
    "argostranslate",
    "transformers",
    "torch",
    "langdetect",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "isort",
    "django-debug-toolbar"
]

# Define your entry-points for console scripts
[project.scripts]
download_spacy_model = "scripts.download_spacy_model:download_spacy_model"

[tool.setuptools]
packages = ["core"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
